<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">

    <TextView
        android:id="@+id/settingTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_text_settings"
        android:gravity="center_horizontal"
        android:textSize="24sp"
        android:fontFamily="@font/arcadeclassic"
        android:padding="10sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:padding="10sp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:padding="10sp">

            <TextView
                android:id="@+id/backgroundTitleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/backgroubd_seek_bar"
                android:textSize="15sp"
                android:fontFamily="@font/arcadeclassic"
                android:padding="10sp"/>

            <TextView
                android:id="@+id/backgroundNum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:fontFamily="@font/arcadeclassic"
                android:padding="10sp"/>

        </LinearLayout>

        <SeekBar
            android:id="@+id/backgroundSeekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:max="100"
            android:min="0"
            android:progress="50"
            android:thumbTint="@color/mainly"
            android:thumb="@drawable/thumb"
            android:progressDrawable="@drawable/seekbar_background"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:padding="10sp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:padding="10sp">

            <TextView
                android:id="@+id/sfxTitleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sfx_seek_bar"
                android:textSize="15sp"
                android:fontFamily="@font/arcadeclassic"
                android:padding="10sp"/>

            <TextView
                android:id="@+id/sfxNum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:fontFamily="@font/arcadeclassic"
                android:padding="10sp"/>

        </LinearLayout>

        <SeekBar
            android:id="@+id/sfxSeekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="100"
            android:min="0"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:padding="10sp"
            android:progress="50"
            android:thumbTint="@color/mainly"
            android:thumb="@drawable/thumb"
            android:progressDrawable="@drawable/seekbar_background"/>
    </LinearLayout>

    <ImageButton
        android:id="@+id/backingButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_action_backing_button"
        android:contentDescription="@string/a_backing_button_description"
        tools:ignore="RedundantDescriptionCheck" />

</LinearLayout>